# llm-council

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md  v2.1-BACKLOG-FROM-MANUAL-SMOKE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md
.planning/phases/01-hardening-conversation-management/: 01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-HUMAN-UAT.md  (+3 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/ux/: 01-cognitive-walkthrough.md  02-nielsen-audit.md  03-redesign-proposal.md
backend/: config.py  council.py  main.py  openrouter.py  research_strategy.py  stats.py  storage.py
backend/tests/: conftest.py  test_council_profile.py  test_research_strategy.py  test_storage.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  api.js  index.css  test-setup.js
frontend/visual-tests/: _fixtures.ts  critique-loaded.spec.ts  error-banner.spec.ts  playwright.config.ts  settings-panel.spec.ts  sidebar-empty.spec.ts  stage2-rankings.spec.ts  stage3-highlight.spec.ts  theme-toggle.spec.ts  welcome-state.spec.ts
scripts/: spike_usage_cost.py
(+191 files in other folders)
