[project]
name = "llm-council"
version = "0.1.0"
description = "Your LLM Council"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "python-multipart>=0.0.28",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
asyncio_default_fixture_loop_scope = "function"
